--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
     "mysql": "^2.11.1",
-    "sequelize": "^3.24.5"
+    "node-yaml-config": "0.0.4",
+    "sequelize": "^3.24.5",
+    "sequelize-cli": "^2.4.0",
+    "serve-favicon": "~2.3.0"
   }
 }
