--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "~4.14.0",
+    "helmet": "^2.3.0",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
+    "morgan": "~1.7.0",
     "mysql": "^2.11.1",
-    "node-yaml-config": "0.0.4",
     "sequelize": "^3.24.5",
     "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
