--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "bower": "^1.7.9",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "gulp": "^3.9.1",
     "helmet": "^2.3.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
@@ -20,7 +22,10 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
     "nodemon": "^1.11.0"
+  },
+  "scripts": {
+    "postinstall": "gulp build --cwd 'semantic/' && bower install"
   }
+
 }
